# wholegraph

./: .clang-tidy  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  dependencies.yaml  fetch_rapids.cmake  format_all.sh
.github/: CODEOWNERS  (+2 more)
cpp/: CMakeLists.txt  Doxyfile  Doxyfile.in
cpp/bench/: CMakeLists.txt
cpp/bench/common/: wholegraph_benchmark.cpp  wholegraph_benchmark.hpp
cpp/bench/wholememory_ops/: gather_scatter_bench.cu  run_benchmark.sh
cpp/cmake/: CodeChecker.cmake
cpp/docs/: DEVELOPER_GUIDE.md
cpp/doxygen/: Doxyfile  main_page.md
cpp/include/wholememory/: device_reference.cuh  embedding.h  env_func_ptrs.h  global_reference.h  graph_op.h  nvshmem_template.cuh  tensor_description.h  wholegraph_op.h  wholememory.h  wholememory_op.h  wholememory_tensor.h
cpp/src/: cuda_macros.cpp  cuda_macros.hpp  error.hpp  logger.cpp  logger.hpp  net_utils.cpp  net_utils.h  parallel_utils.cpp  parallel_utils.hpp
cpp/src/graph_ops/: append_unique.cpp  append_unique_func.cuh  append_unique_impl.cu  append_unique_impl.h  csr_add_self_loop.cpp  csr_add_self_loop_func.cuh  csr_add_self_loop_impl.cu  csr_add_self_loop_impl.h  edge_weight_softmax.cpp  edge_weight_softmax_func.cuh  edge_weight_softmax_impl.cu  edge_weight_softmax_impl.h  gspmm_csr_weighted.cpp  gspmm_csr_weighted_func.cuh  gspmm_csr_weighted_impl.cu  gspmm_csr_weighted_impl.h  spadd_gat_csr.cpp  spadd_gat_csr_func.cuh  spadd_gat_csr_impl.cu  spadd_gat_csr_impl.h  spmm_csr_no_weight.cpp  spmm_csr_no_weight_func.cuh  spmm_csr_no_weight_impl.cu  spmm_csr_no_weight_impl.h
cpp/src/nvshmem_plugins/: nvshmem_wholememory_bootstrap.cpp
cpp/src/wholegraph_ops/: block_radix_topk.cuh  block_topk_with_raft.cuh  raft_random_gen.cpp  raft_random_gen.cu  sample_comm.cuh  unweighted_sample_without_replacement.cpp  unweighted_sample_without_replacement_func.cuh  unweighted_sample_without_replacement_impl.h  unweighted_sample_without_replacement_impl_mapped.cu  unweighted_sample_without_replacement_impl_nccl.cu  unweighted_sample_without_replacement_nccl_func.cuh  weighted_sample_without_replacement.cpp  weighted_sample_without_replacement_func.cuh  weighted_sample_without_replacement_impl.h  weighted_sample_without_replacement_impl_mapped.cu
cpp/src/wholememory/: communicator.cpp  communicator.hpp  embedding.cpp  embedding.hpp  embedding_cache.cpp  embedding_cache.hpp  embedding_optimizer.cpp  embedding_optimizer.hpp  env_func_ptrs.cpp  env_func_ptrs.hpp  file_io.cpp  file_io.h  global_reference.cpp  initialize.cpp  initialize.hpp  integer_utils.hpp  memory_handle.cpp  memory_handle.hpp  nccl_comms.cpp  nccl_comms.hpp  system_info.cpp  system_info.hpp  tensor_description.cpp  wholememory.cpp  wholememory_tensor.cpp
cpp/src/wholememory_ops/: gather_op.cpp  gather_op_impl.h  gather_op_impl_hierarchy.cu  gather_op_impl_mapped.cu  gather_op_impl_nccl.cu  gather_op_impl_nvshmem.cu  gather_op_impl_nvshmem_sort_idx.cu  output_memory_handle.hpp  raft_random.cuh  register.hpp  scatter_op.cpp  scatter_op_impl.h  scatter_op_impl.nvshmem.cu  scatter_op_impl_mapped.cu  scatter_op_impl_nccl.cu  temp_memory_handle.hpp  thrust_allocator.cpp  thrust_allocator.hpp  wholememory_test_op.cu
cpp/tests/: CMakeLists.txt  parallel_utils_tests.cpp
cpp/tests/graph_ops/: append_unique_test_utils.cu  append_unique_test_utils.hpp  append_unique_tests.cu  csr_add_self_loop_tests.cu  csr_add_self_loop_utils.cu  csr_add_self_loop_utils.hpp  edge_weight_softmax_backward_tests.cu  edge_weight_softmax_forward_tests.cu  edge_weight_softmax_test_utils.cu  edge_weight_softmax_test_utils.hpp  gspmm_csr_weighted_backward_tests.cu  gspmm_csr_weighted_forward_tests.cu  gspmm_csr_weighted_test_utils.cu  gspmm_csr_weighted_test_utils.hpp  spadd_gat_csr_backward_tests.cu  spadd_gat_csr_forward_tests.cu  spadd_gat_csr_utils.cu  spadd_gat_csr_utils.hpp  spmm_csr_no_weight_backward_tests.cu  spmm_csr_no_weight_forward_tests.cu  spmm_csr_no_weight_utils.cu  spmm_csr_no_weight_utils.hpp
cpp/tests/wholegraph_ops/: graph_sampling_test_utils.cu  graph_sampling_test_utils.hpp  wholegraph_csr_unweighted_sample_without_replacement_tests.cu  wholegraph_csr_weighted_sample_without_replacement_tests.cu
cpp/tests/wholememory/: mpi_launch_nvshmem_test.cu  wholememory_comm_tests.cpp  wholememory_handle_tests.cpp  wholememory_nvshmem_test.cu  wholememory_tensor_tests.cpp  wholememory_test_utils.hpp
cpp/tests/wholememory_ops/: cacheset_tests.cu  embedding_test_utils.cu  embedding_test_utils.hpp  wholememory_embedding_gradient_apply_tests.cu  wholememory_embedding_tests.cu  wholememory_gather_tests.cu  wholememory_scatter_tests.cu
pylibwholegraph/wholegraph_torch/: CMakeLists.txt  torch_utils.cpp  torch_utils.h
pylibwholegraph/wholegraph_torch/ops/: gather_scatter_ops.cpp  raft_ramdom_generator_ops.cpp  test_raft_random.cuh  (+1 more)
python/pylibwholegraph/: CMakeLists.txt  pyproject.toml  setup.py
test/: CMakeLists.txt  block_topk_test.cu  bootstrap_test.cu  cu_mem_handle_perf.cu  whole_graph_graph_test.cu  whole_graph_mp_test.cu  whole_graph_perf_scan.cu  whole_graph_sp_test.cu  whole_graph_test_utils.cuh  whole_memory_graph_test.cu  whole_memory_mp_test.cu  whole_memory_perf_scan.cu  whole_memory_sp_test.cu  whole_memory_test_utils.cuh
test/pytorch/: graph_sampler_test.py  nccl_func_test.py  single_gpu_test.py  wholememory_chunked_test.py  wholememory_negative_sample_test.py  wholememory_test.py
wholegraph/torch/: CMakeLists.txt  gather_gpu.cu  gnn_ops_gpu.cc  graph_sampler_gpu.cc  pytorch_cuda_env_fns.cc  pytorch_cuda_env_fns.h  pytorch_dtype.cc  pytorch_dtype.h  whole_chunked_pytorch_tensor.cc  whole_chunked_pytorch_tensor.h  whole_graph_pytorch_wrapper.cc  whole_nccl_pytorch_tensor.cc  whole_nccl_pytorch_tensor.h
wholememory/torch/: CMakeLists.txt  gather_gpu.cu  gnn_ops_gpu.cc  graph_sampler_gpu.cc  pytorch_cuda_env_fns.cc  pytorch_cuda_env_fns.h  pytorch_dtype.cc  pytorch_dtype.h  whole_chunked_pytorch_tensor.cc  whole_chunked_pytorch_tensor.h  whole_memory_pytorch_wrapper.cc
(+257 files in other folders)
